<resources>
    <string name="app_name">mbaappo</string>
    <string name="pagina_principa">Pagina Principal</string>
    <string name="publicar_servicio">Publicar Servicio</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrar">Registrar Usuario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="m_contrasena">Modificar Contraseña</string>
    <string name="e_dato">Editar Datos</string>
    <string name="action_settings">Settings</string>
    <string name="electricista">Electricista</string>
    <string name="titulo_del_servicio">Titulo del Servicio</string>
    <string name="precio">Precio</string>
    <string name="tarifa">Tarifa</string>
    <string name="categoria">Categoria</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
