<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.mbaappo.mbaappo.CrearEditarServicio">

    <TextView
        android:id="@+id/tVTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_del_servicio"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/etTituloServicio"
        android:layout_width="329dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/electricista"
        tools:layout_editor_absoluteY="70dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Descripcion del Servicio"
        tools:layout_editor_absoluteY="156dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        tools:ignore="HardcodedText,MissingConstraints"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="331dp"
        android:layout_height="94dp"
        android:ems="10"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteY="189dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        tools:layout_editor_absoluteY="315dp"
        android:layout_marginRight="7dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="7dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarifa"
        tools:layout_editor_absoluteX="320dp"
        tools:layout_editor_absoluteY="315dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="114dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="guaranies"
        tools:layout_editor_absoluteY="346dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Spinner
        android:id="@+id/spTarifa"
        android:layout_width="113dp"
        android:layout_height="34dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="346dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="401dp"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spCateg"
        android:layout_width="257dp"
        android:layout_height="28dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="437dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>
